<resources>
    <string name="app_name">Eventify</string>
    <string name="settings_name">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_filtering">Filter by organization</string>
    <string name="login_continue_without">Continue without</string>
    <string name="guest">Guest</string>
    <string name="log_out">Log out</string>
    <string name="login">Log in</string>
    <string name="home">Home</string>
    <string name="my_events">My Events</string>
    <string name="translate">Translate</string>
    <string name="settings">Settings</string>

    <!-- Languages -->
    <string name="swedish">Svenska</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="slovak">Slovenský</string>
    <string name="romanian">Românesc</string>
    <string name="persian">فارسی</string>
    <string name="turkish">Türk</string>

    <!-- Facebook -->
    <string name="facebook">facebook</string>
    <string name="facebook_app_id">342377189428679</string>
    <string name="facebook_login_button_text">Log in with Facebook</string>

    <!-- Google maps -->
    <string name="destination">Heden</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid lat long used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_location_data_provided">No location data provided</string>

    <!-- Organisations -->
    <string-array name="organisations">
        <item>1726113474298300</item><!-- Tillsammans för östra Göteborg-->
        <item>1561325850757258</item><!--Blå stället-->
        <item>534633456670064</item><!-- Flyktingguide/Språkvän Göteborg  -->
        <item>155193204865736</item><!-- Flyktingguide/Språkvän i Kungsbacka -->
        <item>532748086901149</item><!-- Lundby församlings Flyktinghjälp -->
        <item>1634405946798825</item><!-- Redberg Welcome -->
        <item>1725879724306433</item><!-- Flyktinghjälp -->
    </string-array>

    <string-array name="organisationsName">
        <item>Tillsammans för östra Göteborg</item>
        <item>Blå stället</item>
        <item>Flyktingguide/Språkvän Göteborg</item>
        <item>Flyktingguide/Språkvän i Kungsbacka</item>
        <item>Lundby församlings Flyktinghjälp</item>
        <item>Redberg Welcome</item>
        <item>Flyktinghjälp</item>
    </string-array>

    //TEST STRINGS
    <string name="title_example">ArmIT\'s Football Night</string>
    <string name="description_example">Hi everyone!\n\nWe invite all newly arrived to a evening at Heden.\n\nBest Regards,\nArmIT</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
