<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dat255.eventify.activity.DetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@color/colorAccent"
            android:id="@+id/coverImage"
            android:scaleType="centerCrop"
                android:layout_height="180dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coverImage"
                android:minHeight="50dp"
                android:id="@+id/title_layout"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:weightSum="1">

                <TextView
                android:text="@string/title_example"
                android:layout_height="wrap_content"
                android:id="@+id/titleText"
                android:maxLength="100"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"
                tools:textColor="@color/colorTextLight"
                android:textSize="22sp"
                    android:textColor="#ffffff"
                    android:layout_width="305dp"
                    android:layout_weight="0.03" />
            </LinearLayout>

            <ImageButton
                    android:src="@drawable/ic_navigation"
                    android:id="@+id/showMapsBtn"
                    android:background="@drawable/round_btn"
                    android:scaleType="centerInside"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="155dp" />

            <LinearLayout
                    android:id="@+id/info_layout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:weightSum="1"
                    android:layout_below="@+id/title_layout">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:id="@+id/placeImg"
                            android:src="@drawable/ic_place"
                            android:layout_height="25dp"
                            android:layout_width="25dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />

                        <TextView
                            android:text="World Trade Center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/placeText"
                            android:textColor="@color/colorTextDark"
                            android:textSize="16sp"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@id/placeImg"
                            android:layout_toEndOf="@id/placeImg"
                            android:layout_centerInParent="true"  />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp">

                        <ImageView
                        android:id="@+id/attendingImg"
                        android:src="@drawable/ic_supervisor_account"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />

                        <TextView
                        android:text="1000"
                        android:layout_height="wrap_content"
                        android:id="@+id/attendingText"
                        android:textColor="@color/colorTextDark"
                        android:textSize="16sp"
                        android:layout_centerInParent="true"
                        android:layout_width="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@+id/attendingImg"
                            android:layout_toEndOf="@+id/attendingImg"/>
                    </RelativeLayout>

                    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:id="@+id/dateImg"
                            android:src="@drawable/ic_calendar"
                            android:layout_height="25dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_width="25dp" />

                        <TextView
                            android:text="23 Sep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/dateText"
                            android:textColor="@color/colorTextDark"
                            android:textSize="16sp"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@id/dateImg"
                            android:layout_toEndOf="@id/dateImg"
                            android:layout_centerInParent="true"  />
                    </RelativeLayout>

                    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/timeImg"
                            android:src="@drawable/ic_access_time"
                            android:layout_height="25dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_width="25dp" />

                        <TextView
                            android:text="18:00"
                            android:layout_height="wrap_content"
                            android:id="@+id/timeText"
                            android:textColor="@color/colorTextDark"
                            android:textSize="16sp"
                            android:layout_marginLeft="20dp"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@+id/timeImg"
                            android:layout_toEndOf="@+id/timeImg"
                            android:layout_width="50dp" />

                    </RelativeLayout>
                </LinearLayout>
                <View
                    android:id="@+id/separator"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/info_layout"
                    android:background="@color/colorSeparator"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/separator"
                android:layout_gravity="bottom"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:weightSum="1">

                <TextView
                android:text="@string/description_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descText"
                android:textColor="@color/colorTextDark"
                android:textSize="16sp"
                android:paddingBottom="50dp" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
    <ImageButton
        android:src="@drawable/ic_star_border"
        android:background="#00000000"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:id="@+id/favoriteBtn"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:scaleType="fitCenter"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <ImageButton
        android:id="@+id/backBtn"
        android:background="@android:color/transparent"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_keyboard_backspace"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_height="40dp"
        android:layout_width="40dp" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_translate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:menu_backgroundColor="#cc000000"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorPrimary"
        app:menu_icon="@drawable/ic_translate_white"
        app:menu_labels_position="left"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collapse_00015"
            app:fab_size="mini"
            app:fab_label="@string/english"
            app:fab_colorNormal="@color/colorPrimary"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collapse_00015"
            app:fab_size="mini"
            app:fab_label="@string/arabic"
            app:fab_colorNormal="@color/colorPrimary"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collapse_00015"
            app:fab_size="mini"
            app:fab_label="@string/slovak"
            app:fab_colorNormal="@color/colorPrimary"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collapse_00015"
            app:fab_size="mini"
            app:fab_label="@string/romanian"
            app:fab_colorNormal="@color/colorPrimary"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collapse_00015"
            app:fab_size="mini"
            app:fab_label="@string/persian"
            app:fab_colorNormal="@color/colorPrimary"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collapse_00015"
            app:fab_size="mini"
            app:fab_label="@string/turkish"
            app:fab_colorNormal="@color/colorPrimary" />

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>